[gd_scene load_steps=5 format=3 uid="uid://d0yfd8bi7tsb8"]

[ext_resource type="PackedScene" uid="uid://c5hs6ybpclhvf" path="res://scenes/order_scene/order_scene_table.tscn" id="1_aakxo"]
[ext_resource type="Script" path="res://scenes/order_scene/order_scene_content.gd" id="1_exe83"]
[ext_resource type="StyleBox" uid="uid://cim0paocddqct" path="res://resources/panel_style.tres" id="2_s0pau"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ybk20"]
bg_color = Color(0.352941, 0.352941, 0.352941, 1)

[node name="OrderSceneContent" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_exe83")

[node name="Block_Container" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Block_Container"]
layout_mode = 0
offset_left = 248.0
offset_top = 120.0
offset_right = 1024.0
offset_bottom = 560.0
theme_override_styles/panel = ExtResource("2_s0pau")

[node name="OrderSceneTable" parent="Block_Container" instance=ExtResource("1_aakxo")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 264.0
offset_top = 136.0
offset_right = 904.0
offset_bottom = 496.0
grow_horizontal = 1
grow_vertical = 1

[node name="OptionsBackground" type="Panel" parent="Block_Container"]
layout_mode = 0
offset_left = 264.0
offset_top = 384.0
offset_right = 904.0
offset_bottom = 544.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ybk20")

[node name="ProductAmount" type="SpinBox" parent="Block_Container"]
layout_mode = 0
offset_left = 280.0
offset_top = 424.0
offset_right = 392.0
offset_bottom = 455.0
tooltip_text = "Cantidad del producto elegido"
min_value = 1.0
value = 1.0
editable = false
update_on_text_changed = true
select_all_on_focus = true

[node name="Timer" type="Timer" parent="Block_Container/ProductAmount"]
wait_time = 0.125
one_shot = true

[node name="ProductName" type="OptionButton" parent="Block_Container"]
layout_mode = 0
offset_left = 408.0
offset_top = 424.0
offset_right = 616.0
offset_bottom = 456.0
tooltip_text = "Seleccione un producto..."
theme_override_font_sizes/font_size = 12
disabled = true

[node name="AddEdit" type="Button" parent="Block_Container"]
layout_mode = 0
offset_left = 632.0
offset_top = 424.0
offset_right = 752.0
offset_bottom = 456.0
tooltip_text = "Agregar el producto a la tabla
Editar el producto seleccionado"
theme_override_font_sizes/font_size = 14
disabled = true
text = "Agregar / Editar"

[node name="Delete" type="Button" parent="Block_Container"]
layout_mode = 0
offset_left = 768.0
offset_top = 424.0
offset_right = 888.0
offset_bottom = 456.0
tooltip_text = "Eliminar el producto seleccionado"
theme_override_font_sizes/font_size = 14
disabled = true
text = "Eliminar"

[node name="Waiter" type="Label" parent="Block_Container"]
layout_mode = 0
offset_left = 408.0
offset_top = 464.0
offset_right = 520.0
offset_bottom = 496.0
theme_override_font_sizes/font_size = 14
text = "Mozo a cargo"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Product_Label" type="Label" parent="Block_Container"]
layout_mode = 0
offset_left = 408.0
offset_top = 392.0
offset_right = 520.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 14
text = "PRODUCTO"
vertical_alignment = 1
uppercase = true

[node name="Total_Label" type="Label" parent="Block_Container"]
layout_mode = 0
offset_left = 912.0
offset_top = 256.0
offset_right = 1016.0
offset_bottom = 288.0
theme_override_font_sizes/font_size = 14
text = "TOTAL"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Total_Amount_Label" type="Label" parent="Block_Container"]
layout_mode = 0
offset_left = 912.0
offset_top = 288.0
offset_right = 1016.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Quantity_Label" type="Label" parent="Block_Container"]
layout_mode = 0
offset_left = 280.0
offset_top = 392.0
offset_right = 392.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 14
text = "CANTIDAD"
vertical_alignment = 1
uppercase = true

[node name="Cutlery" type="SpinBox" parent="Block_Container"]
visible = false
layout_mode = 0
offset_left = 280.0
offset_top = 496.0
offset_right = 392.0
offset_bottom = 527.0
tooltip_text = "Cantidad de comensales en la mesa"
min_value = 1.0
value = 1.0
select_all_on_focus = true

[node name="Cutlery_Label" type="Label" parent="Block_Container"]
visible = false
layout_mode = 0
offset_left = 280.0
offset_top = 464.0
offset_right = 392.0
offset_bottom = 496.0
theme_override_font_sizes/font_size = 14
text = "CUBIERTOS"
vertical_alignment = 1
uppercase = true

[node name="WaiterList" type="OptionButton" parent="Block_Container"]
layout_mode = 0
offset_left = 408.0
offset_top = 496.0
offset_right = 616.0
offset_bottom = 528.0
tooltip_text = "Seleccione su usuario..."
theme_override_font_sizes/font_size = 14

[node name="SendOrder" type="Button" parent="Block_Container"]
layout_mode = 0
offset_left = 632.0
offset_top = 496.0
offset_right = 752.0
offset_bottom = 528.0
tooltip_text = "Enviar pedido"
theme_override_font_sizes/font_size = 14
text = "Enviar pedido"

[node name="ExitOrder" type="Button" parent="Block_Container"]
layout_mode = 0
offset_left = 768.0
offset_top = 496.0
offset_right = 888.0
offset_bottom = 528.0
theme_override_font_sizes/font_size = 14
text = "Salir"

[node name="Close_Table" type="Button" parent="Block_Container"]
layout_mode = 0
offset_left = 920.0
offset_top = 136.0
offset_right = 1008.0
offset_bottom = 224.0
text = "Cerrar
Mesa"

[node name="Error_Label" type="Label" parent="Block_Container"]
visible = false
layout_mode = 0
offset_left = 904.0
offset_top = 384.0
offset_right = 1024.0
offset_bottom = 544.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "ERROR"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 2

[connection signal="value_changed" from="Block_Container/ProductAmount" to="." method="_on_product_amount_value_changed"]
[connection signal="timeout" from="Block_Container/ProductAmount/Timer" to="." method="_on_timer_timeout"]
[connection signal="item_selected" from="Block_Container/ProductName" to="." method="_on_product_name_item_selected"]
[connection signal="pressed" from="Block_Container/AddEdit" to="." method="_on_add_edit_pressed"]
[connection signal="pressed" from="Block_Container/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Block_Container/SendOrder" to="." method="_on_send_order_pressed"]
[connection signal="pressed" from="Block_Container/ExitOrder" to="." method="_on_cancel_order_pressed"]
[connection signal="pressed" from="Block_Container/Close_Table" to="." method="_on_close_table_pressed"]
